Adds color key to top of CSS.

--- a/style1.css
+++ b/style1.css
@@ -1,3 +1,17 @@
+/*
+
+Colors
+
+https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46
+
+lighest-green: rgb(202, 210, 197)
+light-green: rgb(132, 169,140)
+green: rgb(82,121,111)
+dark-green: rgb(53,79,82)
+darkest-green: rgb(47,62,70)
+
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap');
 
 html {
