--- a/style.css
+++ b/style.css
@@ -1,5 +1,48 @@
-/* comments! */
 
-html {
-font-family: Arial, sans-serif;
+html, body {
+    margin: 0; 
+    padding: 0;
 }
+html{
+    font-family: 'Josefin Sans', sans-serif
+}
+
+h1 {
+    font-size: 100px;
+    color: rgba(255,255,255, .8);
+    height: 100vh;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100vw;
+    font-variant: small-caps;
+    letter-spacing: 3px;
+    font-weight: normal;
+
+}
+
+h1:nth-of-type(1) {
+    background-color: rgb(47,62,70);
+}
+
+h1:nth-of-type(2) {
+    background-color: rgb(82,121,111);
+}
+
+h1:nth-of-type(3) {
+    background-color: rgb(196, 212, 115);
+}
+
+h1:nth-of-type(4) {
+    background-color: rgb(164,74,63);
+}
+
+h1:nth-of-type(5) {
+    background-color: rgb(237,155,64);
+}
+
+h1:nth-of-type(6) {
+    background-color: rgb(97,201,168);
+}
+
